fix: fixed origin naming

--- a/configs/defidotspace/config.json
+++ b/configs/defidotspace/config.json
@@ -1,5 +1,5 @@
 {
-    "origin": "https://defi.space",
+    "origin": "defi.space",
     "theme": {
       "colors": {
         "primary": "#E82A33"
