--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           project_id: c7e-prod
           workload_identity_provider: "projects/276773611885/locations/global/workloadIdentityPools/github/providers/presets-repo"
+          service_account: "github-actions-presets@c7e-prod.iam.gserviceaccount.com"
 
       # Upload presets configs
       - uses: "google-github-actions/upload-cloud-storage@v2"
