--- a/configs/cartridge/config.json
+++ b/configs/cartridge/config.json
@@ -3,5 +3,13 @@
   "theme": {
     "name": "Cartridge",
     "icon": "icon.svg"
+  },
+  "apple-app-site-association": {
+    "webcredentials": {
+      "apps": [
+        "FAKETEAMID.com.cartridge.marketplace",
+        "F9U4Y5YSTN.com.cartridge.marketplace"
+      ]
+    }
   }
 }
