--- a/configs/jokers-of-neon/config.json
+++ b/configs/jokers-of-neon/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "*.jokersofneon.com",
+  "origin": ["*.jokersofneon.com", "capacitor://localhost", "localhost"],
   "theme": {
     "colors": {
       "primary": "#A144B2"
