--- a/configs/jokers-of-neon/config.json
+++ b/configs/jokers-of-neon/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": ["*.jokersofneon.com", "capacitor://localhost", "localhost"],
+  "origin": ["*.jokersofneon.com", "capacitor://localhost", "localhost", "x.cartridge.gg"],
   "theme": {
     "colors": {
       "primary": "#A144B2"
