update apple org asa

--- a/configs/blob-arena-amma/config.json
+++ b/configs/blob-arena-amma/config.json
@@ -15,7 +15,7 @@
   },
   "apple-app-site-association": {
     "webcredentials": {
-      "apps": ["C6X7J5Y2J8.com.alessandrob.blobarena"]
+      "apps": ["C6X7J5Y2J8.xyz.blobarena"]
     }
   },
   "chains": {
