--- a/configs/loot-survivor/config.json
+++ b/configs/loot-survivor/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "lootsurvivor.io",
+  "origin": ["lootsurvivor.io", "claims.lootsurvivor.io"],
   "chains": {
     "SN_MAIN": {
       "policies": {
