add tournaments origin

--- a/configs/loot-survivor/config.json
+++ b/configs/loot-survivor/config.json
@@ -1,5 +1,9 @@
 {
-  "origin": ["lootsurvivor.io", "claims.lootsurvivor.io"],
+  "origin": [
+    "lootsurvivor.io",
+    "claims.lootsurvivor.io",
+    "tournaments.lootsurvivor.io"
+  ],
   "chains": {
     "SN_MAIN": {
       "policies": {
