feat: add approval amounts to all approve methods
Add required amount field (max uint128) to all approve entrypoints:
- dope-wars: Paper Token approve
- eternum: Resource contract approve
- jokers-of-neon: 5 approve methods across chains
- pistols: FOOLS token approve (2 chains)
- ponziland: 5 token approvals (nftSTRK, eWNT, eQQ, eSG, nftLORDS)
- zkube: NFT approve

All approve methods now comply with the new validation requirement.

--- a/configs/dope-wars/config.json
+++ b/configs/dope-wars/config.json
@@ -22,7 +22,8 @@
               {
                 "name": "Approve",
                 "description": "Approve paper usage",
-                "entrypoint": "approve"
+                "entrypoint": "approve",
+                "amount": "0xffffffffffffffffffffffffffffffff"
               }
             ]
           },
