--- a/configs/eternum/config.json
+++ b/configs/eternum/config.json
@@ -220,7 +220,8 @@
               {
                 "name": "Approve",
                 "description": "Approve resource transfer",
-                "entrypoint": "approve"
+                "entrypoint": "approve",
+                "amount": "0xffffffffffffffffffffffffffffffff"
               },
               {
                 "name": "Send",
