--- a/configs/pistols/config.json
+++ b/configs/pistols/config.json
@@ -182,7 +182,8 @@
             "methods": [
               {
                 "entrypoint": "approve",
-                "description": "Approve use of FOOLS (in-game currency)"
+                "description": "Approve use of FOOLS (in-game currency)",
+                "amount": "0xffffffffffffffffffffffffffffffff"
               }
             ]
           },
@@ -489,7 +490,8 @@
             "methods": [
               {
                 "entrypoint": "approve",
-                "description": "Approve use of FOOLS (in-game currency)"
+                "description": "Approve use of FOOLS (in-game currency)",
+                "amount": "0xffffffffffffffffffffffffffffffff"
               }
             ]
           },
