fix: use wildcard amount for NFT approve methods
Update approve amount to "*" for NFT contracts that also have
set_approval_for_all method:
- jokers-of-neon: 5 NFT approve methods across chains
- zkube: NFT approve method

NFTs use wildcards since approval is per token ID, not per amount.
ERC20 token approvals keep the max uint128 value.

--- a/configs/jokers-of-neon/config.json
+++ b/configs/jokers-of-neon/config.json
@@ -34,7 +34,7 @@
               {
                 "name": "Approve",
                 "entrypoint": "approve",
-                "amount": "0xffffffffffffffffffffffffffffffff"
+                "amount": "*"
               },
               {
                 "name": "Balance Of",
@@ -237,7 +237,7 @@
               {
                 "name": "Approve",
                 "entrypoint": "approve",
-                "amount": "0xffffffffffffffffffffffffffffffff"
+                "amount": "*"
               },
               {
                 "name": "Balance Of",
@@ -440,7 +440,7 @@
               {
                 "name": "Approve",
                 "entrypoint": "approve",
-                "amount": "0xffffffffffffffffffffffffffffffff"
+                "amount": "*"
               },
               {
                 "name": "Balance Of",
@@ -643,7 +643,7 @@
               {
                 "name": "Approve",
                 "entrypoint": "approve",
-                "amount": "0xffffffffffffffffffffffffffffffff"
+                "amount": "*"
               },
               {
                 "name": "Balance Of",
@@ -846,7 +846,7 @@
               {
                 "name": "Approve",
                 "entrypoint": "approve",
-                "amount": "0xffffffffffffffffffffffffffffffff"
+                "amount": "*"
               },
               {
                 "name": "Balance Of",
