fix: add missing mint entrypoint for sepolia

--- a/configs/nums/config.json
+++ b/configs/nums/config.json
@@ -66,6 +66,11 @@
                 "name": "Approve",
                 "entrypoint": "approve",
                 "description": "Approve a payment"
+              },
+              {
+                "name": "Mint",
+                "entrypoint": "mint",
+                "description": "Mint tokens"
               }
             ]
           }
