feat(dopewars): include dopewars app web credentials
Added apple-app-site-association for web credentials.

--- a/configs/dope-wars/config.json
+++ b/configs/dope-wars/config.json
@@ -1,5 +1,10 @@
 {
   "origin": "dopewars.game",
+  "apple-app-site-association": {
+    "webcredentials": {
+      "apps": ["F9U4Y5YSTN.com.cartridge.dopewars"]
+    }
+  },
   "chains": {
     "SN_MAIN": {
       "policies": {
