--- a/configs/nums/config.json
+++ b/configs/nums/config.json
@@ -18,7 +18,7 @@
               },
               {
                 "name": "Select Power Up",
-                "entrypoint": "apply",
+                "entrypoint": "select",
                 "description": "Selects a powerup"
               },
               {
