Update config.json for cagecalls

--- a/configs/cage-calls/config.json
+++ b/configs/cage-calls/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": ["cage-calls-smartcontracts.vercel.app", "localhost", "xyz.medievaltech.cagecallsdev"],
+  "origin": ["cage-calls-smartcontracts.vercel.app", "localhost", "xyz.medievaltech.cagecallsdev", "*.cartridge.gg"],
   "theme": {
     "colors": {
       "primary": "#D31C16"
