--- a/configs/glitch-bomb/config.json
+++ b/configs/glitch-bomb/config.json
@@ -1,8 +1,16 @@
 {
   "origin": [
     "*.glitchbomb.gg",
-    "glitchbomb.gg"
+    "glitchbomb.gg",
+    "glitchbomb-ten.preview.cartridge.gg"
   ],
+  "apple-app-site-association": {
+    "webcredentials": {
+      "apps": [
+        "F9U4Y5YSTN.com.cartridge.glitchbomb"
+      ]
+    }
+  },
   "chains": {
     "SN_SEPOLIA": {
       "policies": {
