--- a/configs/nums/config.json
+++ b/configs/nums/config.json
@@ -4,6 +4,13 @@
     "nums.gg",
     "nums-blond.vercel.app"
   ],
+  "apple-app-site-association": {
+    "webcredentials": {
+      "apps": [
+        "F9U4Y5YSTN.com.cartridge.nums"
+      ]
+    }
+  },
   "chains": {
     "SN_SEPOLIA": {
       "policies": {
